--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -24,4 +27,53 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.footer{
+  display: flex;
+  align-items: flex-end;
+  padding: 16px;
+  justify-content: space-between;
+  margin-top: auto;
+  background-color: #eee;
+}
+
+ul{
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+a:link, a:visited{
+  color: grey;
+  text-decoration: none;
+}
+
+a:hover{
+  color: rgb(206, 138, 12);
+  text-decoration: underline;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 2;
+  margin: 0px;
+  padding: 0px;
+  gap: 8px;
+}
+
+.buttons{
+  display: flex;
+  gap: 8px;
 }
