--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,80 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
+  display: flex;
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
+  display: flex;
+  flex-shrink: 0;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
+  align-items: center;
+}
+
+.layout{
+  display: flex;
+  padding: 0;
+  flex: 1 0 auto;
 }
 
 .sidebar {
+  display: flex;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+}
+
+.sidebar-list{
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  margin: 0;
+  padding: 16px;
+  font-size: 24px;
+  gap: 16px;
 }
 
 .card {
+  flex-grow: 1;
+  flex-basis: 200px;
+  min-width: 240px;
+  max-width: 320px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 32px;
 }
+
+.card-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding: 32px;
+}
+
+a:link{
+  text-decoration: none;
+  color: white;
+}
+
+a:hover{
+  color:rgb(233, 184, 255);
+  text-decoration: underline;
+}
+
